--- a/CoreDataDemo/Storyboard/Base.lproj/Main.storyboard
+++ b/CoreDataDemo/Storyboard/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zvv-zn-IRX">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="180"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="yux-b7-Ovq">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="yux-b7-Ovq">
                                                 <rect key="frame" x="157" y="20.5" width="100" height="99"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="100" id="Pmf-HG-WRx"/>
@@ -33,6 +33,9 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iza-3h-91b">
                                                 <rect key="frame" x="170.5" y="128" width="73" height="30"/>
                                                 <state key="normal" title="Edit Image"/>
+                                                <connections>
+                                                    <action selector="editImageClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="P0T-WQ-aKT"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -171,6 +174,7 @@
                         <outlet property="genderFemaleChoice" destination="cVS-po-wxR" id="3Q5-eO-oxQ"/>
                         <outlet property="genderMaleChoice" destination="XKu-aL-CjL" id="TLr-Ab-aD4"/>
                         <outlet property="lastNameTextField" destination="pjn-c6-RbH" id="k4Z-m7-Sx3"/>
+                        <outlet property="userImageView" destination="yux-b7-Ovq" id="U0Z-y3-lyP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
